2008-04-07  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/tomboy-panel.in, Tomboy/tomboy.in: Replace #!/bin/bash with
	  #!/usr/bin/env bash, to handle OSs that have the audacity to put
	  bash somewhere other than its rightful place.  Fixes bug #521160. 
	  Patch courtesy of Romain Tartiere.
	* configure.in: Fix check for Mono.Addins >= 0.3.  Fixes bug #521616,
	  patch courtesy of Łukasz Jernaś.

2008-03-10  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in: Bumped branch version to 0.10.1.

2008-03-10  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	

2008-03-10  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in: Bumped version to 0.10.0.

2008-03-07  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Tomboy.cs: Added the names of the people who have
	  contributed documentation so they will appear in the
	  About Dialog properly.
	* help/C/tomboy.xml: Updated for the 0.10.0 release.  Fixes
	  bug #520513 (kudos to Paul Cutler for updating the doc).
	* help/C/figures/move-notes-search.png, notebook-icon.png,
	  new-notebook.png, add-notebook-search.png, note-template.png,
	  delete-notebook.png, add-to-notebook.png: New screenshots
	  for Notebooks documentation.
	* help/C/figures/tomboy-new-note.png: Updated for 0.10.0.

2008-03-03  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Bump version to 0.9.9.

2008-03-03  Boyd Timothy <btimothy@gmail.com> 

	* NEWS: Updated for 0.9.8 release.

2008-03-03  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/AddinManager.cs: Check for an older config.xml right after
	  initializing Mono.Addins so we can upgrade from an older version of
	  Tomboy if necessary to allow previously enabled addins to still be
	  enabled in the newer Tomboy.  Fixes bug #514931.
	* Tomboy/Addins/Bugzilla/Bugzilla.addin.xml: Don't update the version. 
	  Updating the version will prevent the upgrade fix done in
	  AddinManager.cs from working.

2008-03-03  Boyd Timothy <btimothy@gmail.com> 
